--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,14 @@
     <buildProviders><add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" /></buildProviders></compilation>
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <location path="Pages/Management">
+    <system.web>
+      <authorization>
+        <allow users="admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
 <connectionStrings>
   <add name="GarageDBEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=GarageDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   <add name="GarageDBConnectionString" connectionString="Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=GarageDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
