--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,17 @@
     <buildProviders><add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" /></buildProviders></compilation>
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  
+      
+  <location path="Pages/ShoppingCart">
+    <system.web>
+      <authorization>
+        <!-- access to all users except those who are logged in-->
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+    
   <location path="Pages/Management">
     <system.web>
       <authorization>
