--- a/Web.config
+++ b/Web.config
@@ -30,7 +30,7 @@
   <location path="Pages/Management">
     <system.web>
       <authorization>
-        <allow users="admin" />
+        <allow users="admin@saif" />
         <deny users="*" />
       </authorization>
     </system.web>
